--- a/manifest.json
+++ b/manifest.json
@@ -49,12 +49,7 @@
             /* SDK配置 */
             "sdkConfigs" : {
                 "ad" : {},
-                "maps" : {
-                    "amap" : {
-                        "appkey_ios" : "cae0dba5f0311d671b3b8fe8f020d0c3",
-                        "appkey_android" : "e5095358c5877f059d5e6a1703796e39"
-                    }
-                }
+                "maps" : {}
             }
         }
     },
